--- a/hash_benchmark/Makefile
+++ b/hash_benchmark/Makefile
@@ -1,11 +1,13 @@
 
 CFLAGS = -Wall -Wextra -Wpedantic
+CCOMPILE=g++
+CPPFLAGS=-std=c++11
 
 .PHONY: all
 all: test
 	./test
 
-test: test.cpp ../hash/sha-256.c
+test: test.cpp ../hash/sha-256.c ../hash/xxhash.o
 
 .PHONY: clean
 clean:
